force-app/main/default/objects/Lead/fields/Data_contato__c.field-meta.xml
<CustomField>
    <fullName>Data_contato__c</fullName>
    <label>Data contato</label>
    <type>Date</type>
</CustomField>