force-app/main/default/objects/Lead/fields/Marcas_de_Interesse__c.field-meta.xml
<CustomField>
    <fullName>Marcas_de_Interesse__c</fullName>
    <label>Marcas de Interesse</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>Foton</fullName>
            </value>
            <value>
                <fullName>Hyundai</fullName>
            </value>
            <value>
                <fullName>Iveco</fullName>
            </value>
            <value>
                <fullName>MAN</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz</fullName>
            </value>
            <value>
                <fullName>Scania</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
            <value>
                <fullName>Volvo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>